[package]
name = "tear-grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.17"
egui_wgpu_backend = "0.17.0"
egui-winit = "0.17"
egui_demo_lib = "0.17"
epi = "0.17.0"
pollster = "0.2.5"
winit = "0.26.1"
wgpu = "0.12.0"